name:                pandoc-narrative-charts
version:             0.1.2.0
synopsis:            Pandoc filter to generate story narrative charts
description:         Creates embedded svg from code blocks.
license:             MIT
license-file:        LICENSE
author:              Lars Krueger
maintainer:          lars_e_krueger@gmx.de
copyright:           (c) 2017 Lars Krueger
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository this
  type:     git
  location: https://github.com/LarsEKrueger/pandoc-narrative-charts.git
  tag: v_0.1.2.0

executable pandoc-narrative-charts
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       pandoc-types >= 1.16 && < 1.18,
                       bytestring == 0.10.*,
                       aeson == 1.0.*,
                       pandoc == 1.19.*,
                       containers == 0.5.*,
                       blaze-svg == 0.3.*,
                       blaze-markup == 0.7.*,
                       text == 1.2.*,
                       data-default == 0.7.*,
                       yaml == 0.8.*,
                       vector == 0.11.*
  hs-source-dirs:      src
  default-language:    Haskell2010
